--- a/lectures/01-peek-into-python-slides.Rmd
+++ b/lectures/01-peek-into-python-slides.Rmd
@@ -271,3 +271,15 @@ knitr::include_graphics("figs/mic-drop.gif")
 
 - Python object `b` can be accessed in R using py$b
 - R object `a` can be accessed in Python using r.a
+
+---
+# Until next time
+
+--
+
+- Schedule a meeting if you need help configuring your system (link in chat)
+
+--
+
+- Homework 01 / Lab 01 will be posted by midnight tonight and due Sunday at 8 pm
+- Submit work as pdfs to gradescope
