--- a/homework/hw-01.Rmd
+++ b/homework/hw-01.Rmd
@@ -4,7 +4,7 @@ output: github_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE, eval = FALSE)
 ```
 
 # Part I: Getting started
@@ -15,4 +15,3 @@ In order to configure your machine to run both R and Python, you'll need to do t
 2. Download and install RStudio (or update if you already have it)
 3. Download and install the `reticulate` package.
 4. If it doesn't prompt you to install miniconda, run `reticulate::install_miniconda()`.
-
