--- a/homework/hw-02.md
+++ b/homework/hw-02.md
@@ -37,8 +37,8 @@ structures.
     4.  `"olleh"`
 
 5.  We saw that in Python it is possible to concatenate and replicate
-    strings using arithmetic operators. Do the update operators also
-    work on strings? Try it.
+    strings using arithmetic operators. Do the update assignment
+    operators also work on strings? Try it.
 
 6.  See Piazza for the note related to string comparison in Python.
     
