--- a/homework/hw-03.md
+++ b/homework/hw-03.md
@@ -19,6 +19,14 @@ Homework 3
 
 2.  Consider the following function:
     
+    ``` python
+    x = 1
+    def f(y):
+        global x
+        x = 5
+        return x + y
+    ```
+    
     1.  Does this function have access to the value of `x` in the global
         namespace even though you haven’t passed it in as an argument?
         Write an analagous function in R and compare the behavior.
