--- a/homework/hw-03.Rmd
+++ b/homework/hw-03.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Homework 3"
-output: github_document
-#geometry: margin=1.5in
+output: pdf_document
+geometry: margin=1.5in
 ---
 
 ```{r setup, include=FALSE}
@@ -37,8 +37,6 @@ ggplot() +
     ```{python, echo = TRUE}
     x = 1
     def f(y):
-        global x
-        x = 5
         return x + y
     
     ```
