--- a/homework/hw-03.md
+++ b/homework/hw-03.md
@@ -60,7 +60,7 @@ Homework 3
     You can fix this behavior by being sure that each repeated string
     remains a separate element before getting passed to `print()` and
     that print recognizes each of those elements to be separate. You can
-    get there by incorporating two realizations:
+    get there by incorporating two ideas:
     
       - As we’ve seen, you can use `*` and `+` operators with string
         types to repeat and concatenate them. They can also be used on
@@ -83,7 +83,7 @@ Homework 3
     l = ["my", "it's", "smokey", "out"]
     ```
     
-    1.  Query two attributes of this string that are of interest to you.
+    1.  Query two attributes of this list that are of interest to you.
     2.  Use the `.append()` list method to add the string `"today"` to
         this list.
     3.  Use list comprehension (see Lab 2) and string methods to
