--- a/homework/hw-03.md
+++ b/homework/hw-03.md
@@ -88,24 +88,24 @@ Homework 3
         this list.
     3.  Use list comprehension (see Lab 2) and string methods to
         capitalize each of the words in this list.
-    4.  Construct one addition list comprehension that uses a string
+    4.  Construct one additional list comprehension that uses a string
         method of your choice and asserts a logical condition for the
         operation using the `if` keyword.
 
 2.  One of the most common places that you’ll find object-oriented
     programming in R is in print methods. Any time you type the name of
     a variable at the console, it often doesn’t actually print out the
-    value of that object, but rather calls on it’s appropriate print
+    value of that object, but rather calls on its particular print
     method.
     
     1.  Create a linear model object using `lm()` (you’re welcome to use
         the `mtcars` example from the slides) and call it `m1`. What is
         the class of `m1`? What is its type (use `typeof()`)? What do
         you get when you print it to the console by either just typing
-        the of the object or using `print()`? Compare that with what you
-        get if you print the object using `print.default()`.
+        the name of the object or using `print()`? Compare that with
+        what you get if you print the object using `print.default()`.
     2.  Run the `summary()` of the model object and save it as `s1`.
         Answer the same questions as above for `s1`.
     3.  Create a ggplot object and save it as `p1`. Answer the same
-        questions as above for `p1` and also look at the help file for
-        `print.ggplot()`.
+        questions as above for `p1`. What command would you use to pull
+        up the help file for the print method of a ggplot?
