--- a/homework/hw-04.md
+++ b/homework/hw-04.md
@@ -18,7 +18,7 @@ Homework 4
     loops, one nested within another, and assigning the variables to
     take the *values* of the lists, to print the full set of sentence
     combinations of the form \`“penguins love sandwiches”, “penguins
-    love ice cream”, …, “turtles love tacos”.
+    love ice cream”, …, “dragons love tacos”.
 
 3.  Repeat this exercise but this time use a single for loop where the
     variable takes the *index* of the loop.
