--- a/homework/hw-04.Rmd
+++ b/homework/hw-04.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Homework 4"
-output: pdf_document
-geometry: margin=1.5in
+output: github_document
+# geometry: margin=1.5in
 ---
 
 ```{r setup, include=FALSE}
@@ -19,7 +19,7 @@ knitr::include_graphics("figs/dragons-love-tacos.png")
     2. a `for` loop where you assign your variable to take the *values* in the list directly, and
     4. Also implement this in R.
     
-1. Consider the lists `animals = ["penguins", "turtles", "dragons"]` and `foods = ["sandwiches", "ice cream", "tacos"]`. Use two for loops, one nested within another, and assigning the variables to take the *values* of the lists, to print the full set of sentence combinations of the form `"penguins love sandwiches", "penguins love ice cream", ..., "turtles love tacos".
+1. Consider the lists `animals = ["penguins", "turtles", "dragons"]` and `foods = ["sandwiches", "ice cream", "tacos"]`. Use two for loops, one nested within another, and assigning the variables to take the *values* of the lists, to print the full set of sentence combinations of the form `"penguins love sandwiches", "penguins love ice cream", ..., "dragons love tacos".
 
 1. Repeat this exercise but this time use a single for loop where the variable takes the *index* of the loop.
     
